welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var nbado = 0
	if (ado(a)==true) {
		nbado = nbado + 1
	}
		if (ado(b)==true) {
		nbado = nbado + 1
	}
		if (ado(c)==true) {
		nbado = nbado + 1
	}
		if (ado(d)==true) {
		nbado = nbado + 1
	}
	return nbado
}

	

def nbado(n:Int):Boolean = {
	if(n>=13 && n<=19) {
		return true 
	}
	else {return false}}
	

	

